# SSDD

./: .dockerignore  .gitignore  README.md  pyproject.toml  pyrightconfig.json
dev/: plan.md
dev/plans/: development_plan.md
dev/scripts/py/: ssdd.py
dev/scripts/r/: ssdd.R
scripts/: run_la_fires.sh
scripts/tide/: run_full_sweep.sh
scripts/tide/radius_sweep/: Dockerfile  README.md  collect.py  compute.py  submit.sh
scripts/tide/sweep_cv/: Dockerfile  README.md  collect.R  compute.R  submit.sh
scripts/tide/sweep_process/: Dockerfile  README.md  collect.py  compute.py
src/: README.md  ssdd_compute.py
src/ssdd/: __init__.py  geometry.py  io.py  metrics.py  pipeline.py  synthetic.py
tests/: test_synthetic.py
