[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ssdd"
version = "0.1.0"
description = "Raw building-level metrics for Structure Separation Distance Density work"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WUI" }]
dependencies = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "numpy",
    "pandas",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ssdd*"]
